# adventofcode

./: .gitignore
2015/: 1.cpp  10.cpp  11.cpp  12.py  14-2.cpp  14.cpp  16.cpp  18-1.cpp  18-2.cpp  2.cpp  3.cpp  4-1.cpp  4-2.cpp  5-1.cpp  6-1.cpp  6-2.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  md5.cpp  md5.h
2023/: 1-1.cpp  1-1X.cpp  1-2.cpp  10-1.cpp  11-1.cpp  12-1.cpp  13-1.cpp  13-2.cpp  14-1.cpp  14-2.cpp  15-1.cpp  16-1.cpp  18-1.cpp  19-1.cpp  2-1.cpp  20-1.cpp  3-1.cpp  4-1.cpp  4-2.cpp  5-1.cpp  6-1.cpp  7-1.cpp  7-2.cpp  8-1.cpp  8-2.cpp  9-1.cpp  CMakeLists.txt
2024/day1/1/: foo.cpp
2024/day1/2/: foo.cpp
2024/day10/: 1.cpp
2024/day11/: 1.cpp  2.cpp
2024/day12/: 1.cpp  2.cpp
2024/day13/: 1.cpp  2.cpp
2024/day14/: 2.cpp  x.c  x.cpp  y.cpp
2024/day15/: 1.cpp  2.cpp
2024/day16/: 1.cpp  2.cpp  x.cpp
2024/day17/: 1.cpp
2024/day18/: 1.cpp  2.cpp
2024/day19/: 1.cpp  2.cpp
2024/day2/: first.cpp  second.cpp
2024/day20/: 1.cpp
2024/day21/: 1.cpp  a.out
2024/day22/: 1.cpp
2024/day23/: 1.cpp  2.cpp
2024/day24/: 1.cpp
2024/day25/: 1.cpp
2024/day3/: 1.cpp  2.cpp
2024/day4/2/: CMakeLists.txt  main.cpp
2024/day4/one/: CMakeLists.txt  main.cpp
2024/day5/: 1.cpp  2.cpp
2024/day6/: 1.cpp  2.cpp
2024/day7/: 1.cpp  2.cpp
2024/day8/: 1.cpp  2.cpp
2024/day9/: 1.cpp  2.cpp
