cmake_minimum_required(VERSION 3.30)
project(2015)

set(CMAKE_CXX_STANDARD 20)

add_executable(1 1.cpp)
add_executable(2 2.cpp)
add_executable(3 3.cpp)
add_executable(4-1 4-1.cpp md5.cpp)
add_executable(4-2 4-2.cpp md5.cpp)
add_executable(5-1 5-1.cpp)
add_executable(6-1 6-1.cpp)
add_executable(6-2 6-2.cpp)
add_executable(7 7.cpp)
add_executable(8 8.cpp)
add_executable(9 9.cpp)
add_executable(10 10.cpp)
add_executable(11 11.cpp)
add_executable(14 14.cpp)