
cmake_minimum_required(VERSION 3.5)

project(Advent2023)

set(CMAKE_CXX_STANDARD 20)

add_executable(1-1 1-1.cpp)
add_executable(1-1X 1-1X.cpp)
add_executable(1-2 1-2.cpp)
add_executable(2-1 2-1.cpp)
add_executable(3-1 3-1.cpp)
add_executable(4-1 4-1.cpp)
add_executable(5-1 5-1.cpp)
add_executable(6-1 6-1.cpp)
add_executable(7-1 7-1.cpp)
add_executable(7-2 7-2.cpp)
add_executable(8-1 8-1.cpp)
add_executable(8-2 8-2.cpp)
add_executable(9-1 9-1.cpp)
add_executable(10-1 10-1.cpp)
add_executable(11-1 11-1.cpp)
add_executable(12-1 12-1.cpp)
add_executable(13-1 13-1.cpp)
add_executable(13-2 13-2.cpp)
add_executable(14-1 14-1.cpp)
add_executable(14-2 14-2.cpp)
add_executable(15-1 15-1.cpp)
add_executable(16-1 16-1.cpp)
add_executable(18-1 18-1.cpp)
add_executable(19-1 19-1.cpp)
add_executable(20-1 20-1.cpp)